Rust/tests/Language/fail_compile/unsafe_block_rejected.to
# expect_error: Expected statement

unsafe {
  print 1
}
